--- a/dogwood.css
+++ b/dogwood.css
@@ -192,9 +192,8 @@ right: 10px;
 } 
 
 #rp {
-  --haccent: 74, 104, 80;
-  --hmain:192, 125, 142;
-}
+  --hmain: 98, 117, 89;
+  --haccent:192, 125, 142;}
 
 
 #es { 
