--- a/dogwood.css
+++ b/dogwood.css
@@ -182,7 +182,7 @@ right: 10px;
 
 
  #ya { 
-  --hmain:192, 125, 142;}     
+  --hmain:192, 125, 142;    
  --haccent: 74, 104, 80;
 } 
 
@@ -193,7 +193,8 @@ right: 10px;
 
 #rp {
   --hmain: 98, 117, 89;
-  --haccent:192, 125, 142;}
+  --haccent: 192, 125, 142;
+}
 
 
 #es { 
