--- a/dogwood.css
+++ b/dogwood.css
@@ -206,3 +206,8 @@ right: 10px;
 --hmain: 141, 158, 158;
 --haccent: 187, 153, 153;
 }
+
+#kb {
+--haccent: 195, 143, 61;
+--hmain: 124, 109, 128;
+}
