--- a/yarrow.css
+++ b/yarrow.css
@@ -920,7 +920,7 @@ right: -500px;
   } 
 
 #khalil { 
---hmain: #7c6d80;
+--hmain: #56847b;
 --haccent: #c38f3d;
  --y-img:  url(https://cdn.discordapp.com/attachments/862370845598416896/875139799252627527/3.png);
   --name: 'khalil b.';
