--- a/bee.css
+++ b/bee.css
@@ -95,7 +95,7 @@
     width: 390px;
     height: 70px; 
     bottom: 0px; 
-
+    line-height: 0px; !important
   } 
   
   .bee-teamtitle { 
@@ -117,6 +117,7 @@ background:
     z-index: 5;
     height: 50px; 
     display: inline-flex; 
+
   } 
   
   .bee-pkmn pkmn { 
