--- a/wasp.css
+++ b/wasp.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'Kinda';
     src:
@@ -31,7 +30,7 @@
   } 
   
   .wasp-left { 
-    width: 220px; 
+    width: 230px; 
     position: absolute; 
     top: 50px;
   } 
@@ -62,10 +61,11 @@
   
   .w-list { 
 background: 
-    -webkit-linear-gradient(top, rgba(var(--background), 0.7), rgba(var(--white), 0.9));
+    -webkit-linear-gradient(top, rgba(var(--background), 0.7), rgba(var(--white), 0.7));
 height: 460px; 
 border-radius: 0px 0px 10px; 
-  overflow: auto;
+  overflow-y: auto;
+overflow-x: hidden;
  position: relative; 
  top:-10px; 
  font-family: 'Kinda';
@@ -136,13 +136,6 @@ margin:0px -10px -15px;
 opacity: 0.9;
 }
  
- #anise { 
---haccent: 140, 133, 194;
---hmain: 191, 127, 147;
-
-   --w-img: url(https://cdn.discordapp.com/attachments/693249041240424470/981419085386637363/31.png); 
- } 
-  
   
 .wasp-tracker.pokesprite #caught { 
   opacity:0.2; 
@@ -172,7 +165,7 @@ height: 500px;
 border-radius: 15px 0px 0px;
     overflow: auto; 
        background: 
-    -webkit-linear-gradient(bottom, rgba(var(--background), 0.7), rgba(var(--white), 0.9));
+    -webkit-linear-gradient(bottom, rgba(var(--background), 0.7), rgba(var(--white), 0.7));
 } 
 
 .wasp-right::-webkit-scrollbar { width: 0px;  }
@@ -292,4 +285,3 @@ font-weight: 600;
    color: var(--grey);
    opacity: 0.7;
 } 
-
