--- a/wasp.css
+++ b/wasp.css
@@ -27,6 +27,7 @@
     position: relative; 
     font-family: 'Nunito';
     list-style: none;
+          box-shadow: 2px 2px rgba(var(--shadow),0.4);
   } 
   
   .wasp-left { 
