--- a/bee.css
+++ b/bee.css
@@ -176,3 +176,8 @@ background:
 --haccent: 140, 133, 194;
 --hmain: 191, 127, 147;
 }
+
+#wen {
+--haccent: 134, 125, 155; 
+--hmain: 125, 164, 161;
+}
