--- a/bee.css
+++ b/bee.css
@@ -1,4 +1,4 @@
-  .bee-wrapper { 
+ .bee-wrapper { 
       --white: 248, 248, 248;
     --shadow: 187, 187, 187;
     --background: 233, 233, 233;
@@ -82,19 +82,20 @@
 } 
 
 .bee-text { 
-  font-size: 15px;
-      padding: 20px 40px 110px;
+      font-size: 15px;
+      padding: 20px 40px 40px;
       text-align: justify;
       line-height:25px;
       color: rgba(var(--black));
       min-height: 100px; 
+      margin-bottom: 5px; 
 } 
 
  
   .bee-team { 
-    position: absolute;   
+position: relative; 
     width: 390px;
-    height: 80px; 
+    height: 60px; 
     bottom: 0px; 
     line-height: 0px !important; 
   } 
@@ -126,7 +127,7 @@ background:
   .bee-pkmn pkmn { 
     position: relative; 
     left: -20px;
-    top: -10px;
+    top: -25px;
   } 
   
   .bee-hp { 
