--- a/progress.css
+++ b/progress.css
@@ -1,6 +1,8 @@
-butternut-post bar { 
+
+.butternut-post bar { 
 display: block;
 width: 100%;
+margin-top: 20px; 
 } 
 
 .butternut-post .p-base { 
@@ -8,10 +10,11 @@ width: 100%;
 height: 10px; 
 background:var(--light-rgb);
 border-radius: 10px; 
+margin-top: 10px;
 } 
 
 
-.bar-icon::after { 
+.bar-icon::before { 
 content:var(--bar-unicode);
 font-family:'starry';
 font-size: 30px; 
@@ -20,7 +23,10 @@ background:-webkit-linear-gradient(var(--group1), var(--group2));
 -webkit-text-fill-color: transparent;
 position: relative; 
 bottom: 10px; 
+z-index: 5; 
+line-height: 0px !important; 
 } 
+
 
 
 .p-bar { 
