--- a/wasp.css
+++ b/wasp.css
@@ -45,7 +45,7 @@
   font-style: italic;  
   z-index: 3; 
   width:250px; 
-    text-shadow: 2px 2px rgba(var(--white));
+     text-shadow: 2px 2px rgba(var(--white)); } 
   
   .waspc-title i { 
     font-size: 35px; 
