--- a/chimera-dance.css
+++ b/chimera-dance.css
@@ -119,3 +119,118 @@
   font-size: 16px;
   display: inline-block;
 } 
+
+
+/*messages*/ 
+
+  .task-messages  {   --bg: 244, 244, 244;
+    --shadow: 187, 187, 187;
+    --background: 232, 232, 232;
+    --black: 63, 63, 63;
+  width: 450px;
+  height: 260px; 
+  background: rgba(var(--bg), 0.5);
+  border-radius: 40px; 
+  margin: 30px auto;
+  box-shadow: 3px -3px 2px  rgba(205, 205, 205, 0.2);
+  font-family: 'Nunito';
+  overflow: hidden;
+  position: relative; 
+    border: 0.5px solid rgba(var(--shadow), 0.5);
+  line-height: 30px; !important
+
+    
+  } 
+  
+  .message-for { 
+    background: var(--group1);
+    width: 250px; 
+    height:30px; 
+    border-radius: 0px 0px  40px ;
+    display: inline-flex; 
+    padding: 10px 30;
+    color: rgba(var(--background), 0.5);
+    font-weight: 800; 
+    
+  } 
+  
+  .message-from { 
+
+
+    height:30px; 
+    border-radius: 0px 0px  40px ;
+    display: inline-flex; 
+    padding: 10px 30;
+    color: rgba(var(--black), 0.6);
+    font-weight: 800; 
+    font-style: italic;
+    position: absolute; 
+    right: 0px; 
+    bottom: 5px; 
+  
+  } 
+  
+  .message-from::before { 
+        content:'from';
+        padding: 0px 5px; 
+    color: rgba(var(--black), 0.3);
+  } 
+  
+  .shoutout { 
+font-weight: 50; 
+width: 340px; 
+margin: auto; 
+margin-top: 50;
+padding: 10px 0px 10px 20px; 
+position: relative; 
+z-index: 3; 
+  } 
+  
+  .task-quotes:before { 
+ content:'“';
+ font-weight: 800; 
+ color: var(--group2);
+ font-size: 90px; 
+ opacity: 0.3; 
+ position: absolute; 
+ top: 120px; 
+ left: 30px; 
+ z-index: 2; 
+  } 
+  
+  #gryffindor .message-house::before { 
+    content:'gryffindor';
+    padding: 0px 5px; 
+    color: rgba(var(--bg), 0.8); 
+     font-style: italic;
+     
+    
+  } 
+  
+    #slytherin .message-house::before { 
+    content:'slytherin';
+    padding: 0px 5px; 
+    color: rgba(var(--bg), 0.8); 
+     font-style: italic;
+     
+    
+  } 
+  
+      #hufflepuff .message-house::before { 
+    content:'hufflepuff';
+    padding: 0px 5px; 
+    color: rgba(var(--bg), 0.8); 
+     font-style: italic;
+     
+    
+  } 
+  
+        #ravenclaw .message-house::before { 
+    content:'ravenclaw';
+    padding: 0px 5px; 
+    color: rgba(var(--bg), 0.8); 
+     font-style: italic;
+     
+    
+  } 
+  
