--- a/chimera-dance.css
+++ b/chimera-dance.css
@@ -123,7 +123,7 @@
 
 /*messages*/ 
 
-  .task-messages  {   --bg: 244, 244, 244;
+    .task-messages  {   --bg: 244, 244, 244;
     --shadow: 187, 187, 187;
     --background: 232, 232, 232;
     --black: 63, 63, 63;
@@ -137,7 +137,7 @@
   overflow: hidden;
   position: relative; 
     border: 0.5px solid rgba(var(--shadow), 0.5);
-  line-height: 30px; !important
+  line-height: 30px !important; 
 
     
   } 
@@ -145,10 +145,10 @@
   .message-for { 
     background: var(--group1);
     width: 250px; 
-    height:30px; 
+    height:30px !important; 
     border-radius: 0px 0px  40px ;
     display: inline-flex; 
-    padding: 10px 30;
+    padding: 10px 30px;
     color: rgba(var(--background), 0.5);
     font-weight: 800; 
     
@@ -160,7 +160,7 @@
     height:30px; 
     border-radius: 0px 0px  40px ;
     display: inline-flex; 
-    padding: 10px 30;
+    padding: 10px 30px;
     color: rgba(var(--black), 0.6);
     font-weight: 800; 
     font-style: italic;
@@ -176,14 +176,14 @@
     color: rgba(var(--black), 0.3);
   } 
   
-  .shoutout { 
+ .shoutout { 
 font-weight: 50; 
 width: 340px; 
-margin: auto; 
-margin-top: 50;
-padding: 10px 0px 10px 20px; 
+top: 60px; 
+left: 60px;
 position: relative; 
 z-index: 3; 
+font-size: 16px; 
   } 
   
   .task-quotes:before { 
@@ -233,4 +233,5 @@ z-index: 3;
      
     
   } 
+  
   
