--- a/chimera-dance.css
+++ b/chimera-dance.css
@@ -167,7 +167,7 @@
     right: 0px; 
     bottom: 5px; 
     font-size: 16px; 
-      text-transform: uppercase; 
+      text-transform: lowercase; 
   } 
   
   .message-from::before { 
