--- a/devour.css
+++ b/devour.css
@@ -1,5 +1,5 @@
 @import "//christieclee.github.io/highalo/high/high.css";  
-
+@import "//dl.dropbox.com/s/6523jl7nh6hietx/high.css";
 
 .devour-wrapper {
     --white: 255, 255, 253;
