--- a/omg.css
+++ b/omg.css
@@ -8,7 +8,7 @@
       min-height: 200px;
       font-family: 'Quicksand', Sans-serif;
       position: relative; 
-      margin: 30px auto;
+      margin: 0px auto;
        -webkit-text-size-adjust: none;
       padding: 20px 30px; 
     /*to delete
@@ -129,37 +129,43 @@ line-height: 25px;
     } 
     
     
- .omg-bottom { 
-  display: inline-block; 
+.omg-bottom { 
+display: inline-block; 
 position: relative; 
   height: 150px; 
   width: 100%; 
   margin-top: 30;
-  left: 30px; 
-  
+  left: 40px; 
 }   
+
 .hicon { 
   left: 0px; 
-  top: 20px; 
+  top:20px; 
 } 
 
 .bottom1 { 
-  width: 50px; 
-  height: 50px; 
-  transform: skew(-40deg, 0deg);
+  width: 40px; 
+  height: 40px; 
+  transform: skew(-50deg, 10deg);
+    position: absolute; 
+  top:5px;
 } 
 
 .bottom2 { 
-    width:50px; 
-  height: 50px; 
-  transform: skew(-20deg, -10deg);
+    width:40px; 
+  height: 40px; 
+  transform: skew(-40deg, 0deg);
 } 
 .omg-icon { 
-  font-size: 40px; 
+  font-size: 45px; 
   position: absolute;
   top: 20px;
-  left: 10px; 
+  left: 4px; 
   color: rgba(var(--black));
+  background-color: rgba(var(--background));
+  width: 60px; 
+  height: 20px; 
+  z-index: 5;
 } 
 .bottom-tag { 
   position: absolute; 
@@ -257,4 +263,3 @@ position: relative;
 --hmain: 119, 67, 92;
 --haccent: 200, 134, 97;
 }
-
