--- a/yew-tracker.css
+++ b/yew-tracker.css
@@ -340,14 +340,15 @@ margin:0px 0px;
 } 
 
 .y-info-inner{ 
-  width: 370px;
-  height: 100px; 
+  width: 347px;
+  height: 87px; 
   overflow: hidden;
-  padding: 10px; 
+  padding: 15px 20px; 
   position: relative; left: 0px; 
-  border: 0.75px solid rgba(var(--white)) ;
-
+  border: 0.75px solid rgba(var(--white)); 
+  line-height: 21px;
 } 
+
 .y-info-inner b { 
   text-transform: lowercase; 
 } 
