--- a/yew-tracker.css
+++ b/yew-tracker.css
@@ -395,7 +395,8 @@ top: 15px;
   height: 100px; 
   padding: 5px; 
 overflow: hidden;
-position: absolute; 
+position: absolute;
+
 } 
 
 .claimicon { 
@@ -414,28 +415,34 @@ position: relative;
 
 .y-info-inner2 { 
   width: 180px;
-  height: 110px; 
+  height: 100px; 
   position: absolute; 
   top:0px; 
   left: 15px; 
   font-size:11px; 
   overflow-x: scroll;
+
 }  
+
+.y-info-inner2.claims { 
+ align-items: flex-start;
+  display: inline-flex;
+  flex-wrap: wrap;
+height: 120px;
+} 
 
 .y-info-inner2 li { 
   text-align: center; 
-  align-items: flex-start;
-  display: inline-flex;
-  flex-wrap: wrap;
   flex-grow: 1;
   background: linear-gradient(to right, rgba(var(--white), 0.5), rgba(var(--white),0.4));
   padding: 2px 6px; 
-  margin: 5px 0px; 
+  margin: 5px 5px; 
 } 
 
 .y-info-inner2 li::before { 
   content: '';
 } 
+
 
 .yew-skills { 
 right: 0px; 
