--- a/yew-tracker.css
+++ b/yew-tracker.css
@@ -1,28 +1,3 @@
-#yewtoggle-wrap #db-y-toggle+label { 
- position: absolute; 
- right:45px;
- top: 50px; 
- color: rgba(var(--white),1);
- text-shadow: 1px 1px rgba(var(--hmain),0.9);
- font-size: 17px; 
- z-index: 11;
- text-align: left; 
- width: 90px; 
- height: 20px; 
-   -webkit-transition: ease-in-out 0.5s;  
-   -ms-transition: ease-in-out 0.5s;  
-   -moz-transition: ease-in-out 0.5s;  
-   -o-transition: ease-in-out 0.5s;
-}
-
-
-  
-</style>
-
-[/dohtml]
-
-
-<style> 
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Yeseva+One&display=swap');
 @import "//christieclee.github.io/highalo/high/high.css";  
 @import "//christieclee.github.io/highalo/starry/starry.css";  
@@ -350,7 +325,6 @@ margin:0px 0px;
   color: rgba(var(--hmain));
   text-shadow: 1px 1px rgba(var(--white),0.5);
   text-transform: uppercase;
-  font-weight: 800;
 } 
 
 
@@ -728,6 +702,7 @@ font:12px 'Quicksand', sans-serif;
  text-transform: uppercase; 
 left: 5px; 
 top: 0px; 
+z-index: 7;
 } 
 
 .thread-info { 
@@ -735,19 +710,18 @@ top: 0px;
   line-height: 18px;
   font-size: 12.5px;
 text-transform: lowercase;
-padding: 10px 10px 0px 10px; 
-left: 40px; 
+padding: 10px 10px 10px 10px; 
+left: 50px; 
 margin-top: -10px; 
 width: 290px;
-display:block;  
 text-align: left; 
-
+  background-image: linear-gradient(to bottom, rgba(var(--white), 0.4), rgba(var(--white),0.1));
+  z-index: 6;
 } 
 
 .thread-info u { 
   text-decoration: none; 
-  margin-left: 10px;
-  
+
 } 
 
 .thread-info u::before { 
@@ -896,4 +870,3 @@ top: 0px;
    filter: grayscale(1);
    color: var(--grey);
 }
- 
