--- a/yew-tracker.css
+++ b/yew-tracker.css
@@ -306,8 +306,6 @@ top: 15px;
    -moz-transition:ease-in-out 0.7s; 
    -o-transition: ease-in-out 0.7s; 
    transition-delay: 0.3s;
-
-
 } 
 
 .yew-info li { 
@@ -321,7 +319,7 @@ margin:0px 0px;
 } 
 
 .yew-info b { 
-  font-size: 14px; 
+
   color: rgba(var(--hmain));
   text-shadow: 1px 1px rgba(var(--white),0.5);
   text-transform: uppercase;
@@ -345,7 +343,8 @@ margin:0px 0px;
   height: 87px; 
   overflow: hidden;
   padding: 15px 20px; 
-  position: relative; left: 0px; 
+  position: relative; 
+  left: 0px; 
   border: 0.75px solid rgba(var(--white)); 
   line-height: 21px;
 } 
@@ -716,7 +715,7 @@ width: 290px;
 text-align: left; 
   background-image: linear-gradient(to bottom, rgba(var(--white), 0.4), rgba(var(--white),0.1));
   z-index: 6;
-	  display: inline-block;
+  display: inline-block;
 } 
 
 .thread-info u { 
@@ -870,3 +869,4 @@ top: 0px;
    filter: grayscale(1);
    color: var(--grey);
 }
+ 
