--- a/yew-tracker.css
+++ b/yew-tracker.css
@@ -713,7 +713,7 @@ left: 50px;
 margin-top: -10px; 
 width: 290px;
 text-align: left; 
-  background-image: linear-gradient(to bottom, rgba(var(--white), 0.4), rgba(var(--white),0.1));
+  background-image: linear-gradient(to right, rgba(var(--white), 0.4), rgba(var(--white),0.1));
   z-index: 6;
   display: inline-block;
 } 
