--- a/omg.css
+++ b/omg.css
@@ -281,3 +281,9 @@ opacity: 0.8;
 --hmain: 119, 67, 92;
 --haccent: 200, 134, 97;
 }
+
+  
+  #rl {
+--haccent: 185, 195, 163;
+--hmain: 145, 145, 162; 
+} 
