--- a/sacrifice.css
+++ b/sacrifice.css
@@ -154,6 +154,7 @@ line-height: 25px;
     font-weight: 600; 
     } 
 
+
 .sacrifice-text hr { 
     border: none;
     border-bottom: 0.5px solid rgba(var(--haccent)); 
@@ -161,7 +162,7 @@ line-height: 25px;
     } 
 
 .sacrifice-tag { 
-  padding: 10px 0px;
+  padding: 15px 0px 0px;
   font-size: 12px; 
 } 
 
@@ -174,3 +175,4 @@ font-size: 12px;
     color:rgba(var(--haccent));
     margin-right: 2px; 
 } 
+
