--- a/sacrifice.css
+++ b/sacrifice.css
@@ -1,4 +1,5 @@
 @import "//christieclee.github.io/highalo/high/high.css";  
+@import "//christieclee.github.io/alotemplates/oc-colors.css";  
 
 .sacrifice-wrapper { 
    --gray: 93, 93, 93;
