--- a/sacrifice.css
+++ b/sacrifice.css
@@ -126,6 +126,7 @@ text-align: left;
 font-size: 15px; 
 text-align: left; 
 line-height: 25px;
+     box-shadow: 1px -3px 10px  rgba(205, 205, 205, 0.2);
 } 
 
 
