--- a/dogwood.css
+++ b/dogwood.css
@@ -1,5 +1,6 @@
 @import "//christieclee.github.io/highalo/high/high.css";  
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 
 .dogwood-wrapper { 
     --white: 248, 248, 248;
